manifests/worker.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: mastercloudapps/pa-worker:1.0
