manifests/db.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysqldb
spec:
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
      - name: mysqldb
        image: mysql:5.6
        # volumeMounts:
        # - name: mysql-data
        #   mountPath: /var/lib/mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  ports:
  - port: 3306
  selector:
    app: mysqldb
  type: ClusterIP
