manifests/external_service.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: externalservice
spec:
  selector:
    matchLabels:
      app: externalservice
  template:
    metadata:
      labels:
        app: externalservice
    spec:
      containers:
      - name: externalservice
        image: mastercloudapps/pa-externalservice:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: externalservice
spec:
  ports:
  - port: 9090
    name: port1
  selector:
    app: externalservice
  type: ClusterIP
