manifests/server.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: mastercloudapps/pa-server:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  ports:
  - port: 8080
  selector:
    app: server
  type: LoadBalancer
