manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: server
    annotations: 
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/rewrite-target: "/"

    labels:
      app: server
spec:
  rules:
  - host: www.sampledomain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: server
          servicePort: 8080
