manifests/np-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbit-from-server
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: server
    ports:
    - port: 15672
      protocol: TCP
    - port: 5672
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: server-to-rabbit
spec:
  podSelector:
    matchLabels:
      app: server
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: rabbitmq
    ports:
    - port: 15672
      protocol: TCP
    - port: 5672
      protocol: TCP
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-from-server
spec:
  podSelector:
    matchLabels:
      app: mongodb
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: server
    ports:
    - port: 27017
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-to-server
spec:
  podSelector:
    matchLabels:
      app: mongodb
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: server
    ports:
    - port: 27017
      protocol: TCP
# ---

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: server-external-ingress
# spec:
#   podSelector:
#     matchLabels:
#       app: server
#   ingress:
#     - from: []
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-all-egress
# spec:
#   podSelector: 
#       matchLabels:
#         app: server
#   egress:
#   - {}
#   policyTypes:
#   - Egress
