manifests/np-worker.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbit-from-worker
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: worker
    ports:
    - port: 15672
      protocol: TCP
    - port: 5672
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-to-rabbit
spec:
  podSelector:
    matchLabels:
      app: worker
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: rabbitmq
    ports:
    - port: 15672
      protocol: TCP
    - port: 5672
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-from-worker
spec:
  podSelector:
    matchLabels:
      app: mysqldb
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: worker
    ports:
    - port: 3306
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-to-mysql
spec:
  podSelector:
    matchLabels:
      app: worker
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mysqldb
    ports:
    - port: 3306
      protocol: TCP
